--- a/fly.toml
+++ b/fly.toml
@@ -12,7 +12,7 @@ primary_region = "cdg"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 2
+  min_machines_running = 1
   processes = ["app"]
   [http_service.concurrency]
     type = "requests"
@@ -24,4 +24,4 @@ primary_region = "cdg"
     timeout = "5s"
     grace_period = "10s"
     method = "GET"
-    path = "/" # healthz
+    path = "/healthz"
