--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-API_URL=http://localhost:3030 # server reachable
+PRIVATE_API_URL=http://localhost:3030 # server reachable
 PUBLIC_API_URL=http://localhost:3030 # client reachable
