fix: revert fly domains

--- a/fly.toml
+++ b/fly.toml
@@ -7,7 +7,7 @@ primary_region = "cdg"
 [env]
   PORT = "8080"
   PRIVATE_API_URL = "http://zadnjica.internal:3030"
-  PUBLIC_API_URL = "https://zadnjica.fly.dev"
+  PUBLIC_API_URL = "https://api.brzaguza.rs"
 
 [http_service]
   internal_port = 8080
