--- a/.github/workflows/testingci.yml
+++ b/.github/workflows/testingci.yml
@@ -12,9 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'npm'
       - run: npm ci
-      - run: npm run build
+
+      - uses: oven-sh/setup-bun@v1
+      - run: bun run build
