--- a/.github/workflows/dockerflycd.yml
+++ b/.github/workflows/dockerflycd.yml
@@ -16,6 +16,7 @@ jobs:
       packages: write
 
     steps:
+      - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
 
