--- a/.github/workflows/dockerci.yml
+++ b/.github/workflows/dockerci.yml
@@ -16,6 +16,7 @@ jobs:
       packages: read
 
     steps:
+      - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/metadata-action@v5
