--- a/.github/workflows/dockerflycd.yml
+++ b/.github/workflows/dockerflycd.yml
@@ -17,7 +17,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/login-action@v3
