--- a/.github/workflows/dockerci.yml
+++ b/.github/workflows/dockerci.yml
@@ -17,6 +17,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/metadata-action@v5
@@ -33,3 +38,4 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: |-
             linux/amd64
+            linux/arm64
