fix: docker build dir

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM oven/bun:1 as base
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY . ./
+RUN mv build/* ./
 
 EXPOSE 3000
 
 ENTRYPOINT [ "bun" ]
-
 CMD [ "run", "start" ]
