fix: force set cors origin header, revert PRIVATE env var, disable ssr on public api, disable csr on private api

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-PRIVATE_API_URL=http://localhost:3030 # server reachable
+API_URL=http://localhost:3030 # server reachable
 PUBLIC_API_URL=http://localhost:3030 # client reachable
