--- a/.github/workflows/testingci.yml
+++ b/.github/workflows/testingci.yml
@@ -13,11 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # install deps (using pnpm until bun fixes bug for static assets)
+      - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
-      - run: npm ci
+          cache: 'pnpm'
+      - run: pnpm install
 
       - uses: oven-sh/setup-bun@v1
       - run: bun run build
