--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+ORIGIN=http://localhost:5173 # this server
 API_URL=http://localhost:3030 # server reachable
 PUBLIC_API_URL=http://localhost:3030 # client reachable
