--- a/.github/workflows/dockerflycd.yml
+++ b/.github/workflows/dockerflycd.yml
@@ -20,6 +20,8 @@ jobs:
 
       # install deps (using pnpm until bun fixes bug for static assets)
       - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
