--- a/.github/workflows/dockerci.yml
+++ b/.github/workflows/dockerci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: lts/*
           cache: 'pnpm'
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
 
       # build project
       - uses: oven-sh/setup-bun@v1
