feat(revert): bun is buggy, node is just as fast for this usecase

--- a/.github/workflows/testingci.yml
+++ b/.github/workflows/testingci.yml
@@ -23,5 +23,4 @@ jobs:
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
 
-      - uses: oven-sh/setup-bun@v1
-      - run: bun run build
+      - run: npm run build
