--- a/.github/workflows/dockerflycd.yml
+++ b/.github/workflows/dockerflycd.yml
@@ -29,8 +29,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       # build project
-      - uses: oven-sh/setup-bun@v1
-      - run: bun run build
+      - run: npm run build
 
       # setup docker (arm64)
       - uses: docker/setup-qemu-action@v3
