--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "prednjica",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"private": true,
 	"scripts": {
-		"start": "bun run index.js",
+		"start": "node run index.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -25,7 +26,6 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
-		"svelte-adapter-bun": "^0.5.1",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
