--- a/fly.toml
+++ b/fly.toml
@@ -6,8 +6,8 @@ primary_region = "cdg"
 
 [env]
   ORIGIN = "https://brzaguza.rs"
-  API_URL = "http://zadnjica.internal:3030"
-  PUBLIC_API_URL = "https://api.brzaguza.rs"
+  PUBLIC_API_URL_SSR = "http://zadnjica.internal:3030"
+  PUBLIC_API_URL_CSR = "https://api.brzaguza.rs"
 
 [http_service]
   internal_port = 3000
