--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 ORIGIN=http://localhost:5173 # this server
-API_URL=http://localhost:3030 # server reachable
-PUBLIC_API_URL=http://localhost:3030 # client reachable
+PUBLIC_API_URL_SSR=http://localhost:3030 # server reachable
+PUBLIC_API_URL_CSR=http://localhost:3030 # client reachable
