fix: only build folder needed for docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,7 @@ FROM gcr.io/distroless/nodejs20-debian12:nonroot
 
 WORKDIR /app
 
-COPY . ./
-RUN ["mv", "build/*", "./"]
+COPY build/ ./
 
 CMD [ "index.js" ]
 
