--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.3.3",
 	"private": true,
 	"scripts": {
-		"start": "node ./index.js",
+		"start": "node ./build/index.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
