fix: sveltekit conventions, moving stuff to components, etc.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-ORIGIN=http://localhost:5173 # this server
-PUBLIC_API_URL_SSR=http://localhost:3030 # server reachable
-PUBLIC_API_URL_CSR=http://localhost:3030 # client reachable
+API_URL=http://localhost:3030 # server reachable
