--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.30.3",
+		"@sveltejs/adapter-node": "^4.0.1",
+		"@sveltejs/kit": "^2.4.3",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
 		"autoprefixer": "^10.4.17",
@@ -22,14 +23,14 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.33",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.2.4",
+		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.3",
 		"tailwindcss": "^3.4.1",
-		"tslib": "^2.4.1",
+		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.1"
+		"vite": "^5.0.12"
 	},
 	"type": "module"
 }
