--- a/.github/workflows/testingci.yml
+++ b/.github/workflows/testingci.yml
@@ -23,4 +23,4 @@ jobs:
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
 
-      - run: npm run build
+      - run: pnpm run build
