feat(images): use backend proxy for loading images

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 API_URI=http://localhost:3030 # server reachable
+PUBLIC_API_URI=http://localhost:3030 # client reachable
+# use local frontend with official backend (CORS is enabled for http://localhost:5173)
+# API_URI=https://api.hearch.co
+# PUBLIC_API_URI=https://api.hearch.co
