--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
+		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
+		"@typescript-eslint/eslint-plugin": "^7.4.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
