--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/adapter-node": "^5.0.1",
+		"@sveltejs/adapter-vercel": "^5.2.0",
 		"@sveltejs/kit": "^2.5.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
