--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+PUBLIC_URI=http://localhost:5173
+# use local frontend with local backend
 API_URI=http://localhost:3030 # server reachable
 PUBLIC_API_URI=http://localhost:3030 # client reachable
 # use local frontend with official backend (CORS is enabled for http://localhost:5173)
