--- a/.github/workflows/testingci.yml
+++ b/.github/workflows/testingci.yml
@@ -13,14 +13,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # install deps (using pnpm until bun fixes bug for static assets)
-      - uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
           version: 8
+          run_install: false
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'pnpm'
-      - run: make install
+          cache: 'pnpm' # must be preinstalled
 
+      - run: make install
       - run: make compile
+      - run: make check
+      - run: make lint
+      - run: make test
