--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@hearchco/sveltekit-adapter-aws": "github:hearchco/sveltekit-adapter-aws#v0.1.3",
 		"@playwright/test": "^1.44.1",
-		"@hearchco/sveltekit-adapter-aws": "github:hearchco/sveltekit-adapter-aws#v0.1.2",
 		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.5.17",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
@@ -28,8 +28,8 @@
 		"globals": "^15.6.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.4",
-		"svelte": "^5.0.0-next.160",
+		"prettier-plugin-svelte": "^3.2.5",
+		"svelte": "5.0.0-next.160",
 		"svelte-check": "^3.8.1",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.4.5",
