--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+PUBLIC_UI_VERSION=dev
 PUBLIC_URI=http://localhost:5173
 # use local frontend with local backend
 API_URI=http://localhost:3030 # server reachable
