--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@hearchco/sveltekit-adapter-aws": "github:hearchco/sveltekit-adapter-aws#v0.1.4",
+		"@hearchco/sveltekit-adapter-aws": "npm:@jsr/hearchco__sveltekit-adapter-aws@^0.1.10",
 		"@playwright/test": "^1.45.1",
 		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.5.18",
@@ -25,7 +25,7 @@
 		"eslint": "^9.6.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.41.0",
-		"globals": "^15.7.0",
+		"globals": "^15.8.0",
 		"postcss": "^8.4.39",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.5",
