--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@hearchco/sveltekit-adapter-aws": "npm:@jsr/hearchco__sveltekit-adapter-aws@^0.1.12",
 		"@playwright/test": "^1.46.1",
+		"@sveltejs/adapter-auto": "^3.2.4",
 		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.5.25",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
