--- a/.github/workflows/dockercicd.yml
+++ b/.github/workflows/dockercicd.yml
@@ -46,7 +46,7 @@ jobs:
       # setup docker (arm64)
       - uses: docker/setup-qemu-action@v3
         with:
-          platforms: arm64
+          platforms: arm64,arm
 
       - uses: docker/setup-buildx-action@v3
 
@@ -75,3 +75,4 @@ jobs:
           platforms: |-
             linux/amd64
             linux/arm64
+            linux/arm/v7
