--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/kit": "^2.8.1",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
